5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4515/executions/1643_2447.log
== TEST (2019-04-15 13:59:42) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	print("Falta "(round(preco-pagamento),2)
else:	
	print("Troco de "(round(pagamento-preco),2)
-- ERROR:
File "XXXX", line 6
    else:	
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:00:04) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	print("Falta "(round(preco-pagamento),2))
else:	
	print("Troco de "(round(pagamento-preco),2)
-- ERROR:
File "XXXX", line 8
    
                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:00:11) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	print("Falta "(round(preco-pagamento),2))
else:	
	print("Troco de "(round(pagamento-preco),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta "(round(preco-pagamento),2))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:00:44) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	print("Falta "+(round(preco-pagamento),2))
else:	
	print("Troco de "+(round(pagamento-preco),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta "+(round(preco-pagamento),2))
TypeError: must be str, not tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:00:56) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	print("Falta "+(round(preco-pagamento),2))
else:	
	print("Troco de "+(round(pagamento-preco),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Falta "+(round(preco-pagamento),2))
TypeError: must be str, not tuple
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:02:19) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	falta=round(preco-pagamento,2)
	print("Falta "+falta)
else:	
	troco=round(pagamento-preco,2)
	print("Troco de "+troco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print("Falta "+falta)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:03:41) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	falta=round(preco-pagamento,2)
	print("Falta ",falta)
else:	
	troco=round(pagamento-preco,2)
	print("Troco de ",troco)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:03:48) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	falta=round(preco-pagamento,2)
	print("Falta ",falta)
else:	
	troco=round(pagamento-preco,2)
	print("Troco de ",troco)
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:04:00) 
-- CODE:

preco=float(input("Informe preco :"))
pagamento=float(input("Informe pagamento :"))
if(preco > pagamento):
	falta=round(preco-pagamento,2)
	print("Falta ",falta)
else:	
	troco=round(pagamento-preco,2)
	print("Troco de ",troco)
-- EXECUTION TIME:
0.153582
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
